force-app/main/default/objects/trailheadapp__User_Badge__c/trailheadapp__User_Badge__c.object-meta.xml
<CustomObject>
    <description>Junction object for badges and users.</description>
    <label>User Badge</label>
    <nameField>
        <displayFormat>BADGE-{0000}</displayFormat>
        <label>User Badge ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Badges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>