force-app/main/default/objects/trailheadapp__User_Badge__c/fields/trailheadapp__Badge_Icon__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__Badge_Icon__c</fullName>
    <formula>IF(ISNULL(trailheadapp__Finished_Date__c), &quot;Keep Trying&quot;,trailheadapp__Badge__r.trailheadapp__Badge_Icon__c )</formula>
    <label>Badge Icon</label>
    <type>Text</type>
</CustomField>