force-app/main/default/objects/trailheadapp__User_Badge__c/fields/trailheadapp__Status__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__Status__c</fullName>
    <defaultValue>&quot;Assigned&quot;</defaultValue>
    <description>Three types of status, &quot;Assigned&quot;, &quot;In Progress&quot;, or &quot;Completed&quot; are available to represent the status of a user&apos;s badge. While we always expect a value, this is not a required field to enable FLS for badge assigners.</description>
    <inlineHelpText>Three types of status, &quot;Assigned&quot;, &quot;In Progress&quot;, or &quot;Completed&quot; are available to represent the status of a user&apos;s badge</inlineHelpText>
    <label>Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>