force-app/main/default/objects/trailheadapp__User_Badge__c/fields/trailheadapp__URL__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__URL__c</fullName>
    <formula>trailheadapp__Badge__r.trailheadapp__URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>URL</label>
    <type>Text</type>
</CustomField>